fixed clickHandler/added generateFunction for dataPrep

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Map</title>
         <link rel="stylesheet" href="style.css">
+        <script type="module" src="main.js" defer></script>
     </head>
 
     <body>
-        <p>hhhh</p>
+        <!-- Buttons to start and stop animation -->
+        <button id="startButton">Start Animation</button>
+        <button id="stopButton">Stop Animation</button>
         <canvas id="canvas" style="border: solid 5px blue" ; width="1800" height="1800"></canvas>
-        <script type="module" src="main.js"></script>
+
 </body>
 
 </html>
