removed obsolete comments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Buttons to start and stop animation -->
         <button id="startButton">Start Animation</button>
         <button id="stopButton">Stop Animation</button>
-        <canvas id="canvas" style="border: solid 5px blue" width="1800" height="1800"></canvas>
+        <canvas id="canvas"  width="1800" height="1800"></canvas>
 
 </body>
 
